--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,12 +369,16 @@ button[type="submit"] {
 }
 
 
-.main_menu ul ul li:hover>ul {
+.main_menu ul ul li:hover > ul {
     top: 0;
     visibility: visible;
     opacity: 1;
 }
 
+.main_menu ul li ul li:hover > a{
+    color: #fff;
+    background-color: #f85c80;
+}
 
 .main_menu ul li>a,
 .main_menu ul li ul li>a {
