--- a/exam-1/assets/css/style.css
+++ b/exam-1/assets/css/style.css
@@ -374,7 +374,7 @@ button[type="submit"] {
 }
 
 .main_menu li li a {
-    padding: 7px 15px;
+    padding: 7px 0px;
 }
 
 
@@ -411,7 +411,7 @@ button[type="submit"] {
 
 .menu-cta img {
     margin-bottom: 30px;
-    width: 100px;
+    width: 80px;
 }
 
 .menu-cta .boxed-btn {
@@ -428,6 +428,7 @@ button[type="submit"] {
 .main_menu li:last-child ul {
     left: auto;
     right: 0;
+    text-align: right;
 }
 
 .main_menu li.mega-menu ul {
